--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<meta name="format-detection" content="telephone=no" />
+  <link rel="icon" type="image/x-icon" href="static/favicon.ico">
+  <meta name="format-detection" content="telephone=no" />
   <meta name="format-detection" content="email=no" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
