Refactor link handling in multiple index.html files to use a function for redirection, enhancing tracking capabilities.

--- a/src/pages/三橋貴明V18.0/index.html
+++ b/src/pages/三橋貴明V18.0/index.html
@@ -12,10 +12,15 @@
   <meta name="description" content="">
   <meta name="timestamp" content="1757949992496">
 
+  <!---------------------------⬇⬇⬇⬇跟踪代码粘贴在这里⬇⬇⬇⬇------------------------------------>
+
+  <!---------------------------⬆⬆⬆⬆跟踪代码粘贴在这里⬆⬆⬆⬆----------------------------------->
   <script>
-    const link = 'https://www.baidu.com'
+    const onLinkBtnClick = () => {
+      const link = "https://www.baidu.com"
+      if (typeof gtag_report_conversion === 'function') {gtag_report_conversion(link);} else {window.location.href = link;}
+    }
   </script>
-  <script type="module" src="/mjSFqQ/RedirectCode.astro_astro_type_script_index_0_lang.BZ31BsbB.js"></script>
   <link rel="stylesheet" href="/mjSFqQ/index.DHPArPCr.css">
   <link rel="stylesheet" href="/mjSFqQ/index.ChA8HEYy.css">
 </head>
