--- a/src/pages/高橋洋一V19.0/index.html
+++ b/src/pages/高橋洋一V19.0/index.html
@@ -1,4 +1,5 @@
 <html lang="ja">
+
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6,37 +7,41 @@
   <link rel="stylesheet" href="static/css/main.css">
   <!---------------------------⬇⬇⬇⬇跟踪代码粘贴在这里⬇⬇⬇⬇------------------------------------>
 
-<!---------------------------⬆⬆⬆⬆跟踪代码粘贴在这里⬆⬆⬆⬆----------------------------------->
-<script>
-  const onLinkBtnClick = () => {
-    const link = "https://www.baidu.com"
-    if (typeof gtag_report_conversion === 'function') {gtag_report_conversion(link);} else {window.location.href = link;}
-  }
-</script>
+  <!---------------------------⬆⬆⬆⬆跟踪代码粘贴在这里⬆⬆⬆⬆----------------------------------->
+  <script>
+    const onLinkBtnClick = () => {
+      const link = "https://www.baidu.com"
+      if (typeof gtag_report_conversion === 'function') { gtag_report_conversion(link); } else { window.location.href = link; }
+    }
+  </script>
 </head>
+
 <body>
   <main id="<%= mountElementId %>"></main>
 </body>
 
 <script>
-document.addEventListener('DOMContentLoaded', () => {
-  const modal = document.getElementById('privacyModal');
-  const closeBtn = document.querySelector('.close-btn');
-  document.getElementById('privacyLink').addEventListener('click', (e) => {
-    e.preventDefault();
-    modal.style.display = 'block';
-    document.body.style.overflow = 'hidden';
+  document.addEventListener('DOMContentLoaded', () => {
+    setTimeout(() => {
+      const modal = document.getElementById('privacyModal');
+      const closeBtn = document.querySelector('.close-btn');
+      document.getElementById('privacyLink').addEventListener('click', (e) => {
+        e.preventDefault();
+        modal.style.display = 'block';
+        document.body.style.overflow = 'hidden';
+      });
+      closeBtn.addEventListener('click', () => {
+        modal.style.display = 'none';
+        document.body.style.overflow = 'auto';
+      });
+      window.addEventListener('click', (e) => {
+        if (e.target === modal) {
+          modal.style.display = 'none';
+          document.body.style.overflow = 'auto';
+        }
+      });
+    }, 1000);
   });
-  closeBtn.addEventListener('click', () => {
-    modal.style.display = 'none';
-    document.body.style.overflow = 'auto';
-  });
-  window.addEventListener('click', (e) => {
-    if (e.target === modal) {
-      modal.style.display = 'none';
-      document.body.style.overflow = 'auto';
-    }
-  });
-});
 </script>
+
 </html>
